tests/checker/ok/repetition_fixed.can
Bit = One + Zero

Byte = Bit^8

Unit => Program {
    "byte type defined" -> Print
}
