tests/checker/fail/user_shape_declaration.can
Greeting = String

Show = () => String

Show = (Greeting) => String {
    "HELLO!"
}

Unit => Program {
    Greeting("hi")
        -> Show
        -> Print
}
